tests/snapshots/snapshots__pipeline@errors_ctl_poly.pr.snap
---
source: tests/snapshots.rs
expression: "tiny_prism::report(&src)"
input_file: tests/cases/errors_ctl_poly.pr
---
== tokens ==
VOpen Effect UIdent("Bail") LBrace Ctl Ident("bail") LParen KwString RParen Colon Ident("a") RBrace VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("r") Eq VOpen Handle Ident("bail") LParen StringLit("nope") RParen With VOpen Ident("bail") LParen Ident("m") Comma Ident("k") RParen FatArrow Ident("k") LParen Int(IntLit { value: 0, suffix: None }) RParen VSemi Return Ident("v") FatArrow Ident("v") VClose VClose VSemi Ident("println") LParen Ident("r") RParen VClose VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Bail",
            params: [],
            ops: [
                EffOp {
                    name: "bail",
                    params: [
                        Str,
                    ],
                    ret: Var(
                        "a",
                    ),
                },
            ],
            span: 0..38,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "r",
                    Spanned {
                        node: Handle(
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "bail",
                                        ),
                                        span: 73..77,
                                    },
                                    [
                                        Spanned {
                                            node: Str(
                                                "nope",
                                            ),
                                            span: 78..84,
                                        },
                                    ],
                                ),
                                span: 73..85,
                            },
                            [
                                Op(
                                    "bail",
                                    [
                                        "m",
                                    ],
                                    "k",
                                    Spanned {
                                        node: Call(
                                            Spanned {
                                                node: Var(
                                                    "k",
                                                ),
                                                span: 111..112,
                                            },
                                            [
                                                Spanned {
                                                    node: Int(
                                                        IntLit {
                                                            value: 0,
                                                            suffix: None,
                                                        },
                                                    ),
                                                    span: 113..114,
                                                },
                                            ],
                                        ),
                                        span: 111..115,
                                    },
                                ),
                                Return(
                                    "v",
                                    Spanned {
                                        node: Var(
                                            "v",
                                        ),
                                        span: 134..135,
                                    },
                                ),
                            ],
                        ),
                        span: 66..135,
                    },
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "println",
                                ),
                                span: 138..145,
                            },
                            [
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 146..147,
                                },
                            ],
                        ),
                        span: 138..148,
                    },
                ),
                span: 54..148,
            },
            wheres: [],
            span: 40..148,
        },
    ],
}

== types ==
Type Error: op `bail` has a polymorphic return type and can only be handled by `final ctl`
   ╭─[ <source>:8:21 ]
   │
 8 │       bail(m, k) => k(0)
   │                     ──┬─  
   │                       ╰─── op `bail` has a polymorphic return type and can only be handled by `final ctl`
───╯
